A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5759] fixed Oracle ORA-01002 SQL error on items bulk actions (Toms)
A.F....... [ZBX-5704] fixed validation on file uploading (Eduard)
A......... [ZBX-5737] fixed image saving using Oracle (Eduard)
..F....... [ZBX-5639] fixed global options "dropdown first entry" and "remember selected" in availability reports (Oleg)
..F....... [ZBX-5639] improved sdii() debugging function (Toms)
A.F.....S. [ZBX-5816] fixed undefined index in Monitoring > Events, when favorite trigger has been deleted (Toms, Sasha)
..F....... [ZBX-5771] fixed acknowledge tick mark lost on "overview" page (Oleg)
..F....... [ZBX-5821] fixed 2.0 xml format template import (Oleg)
........S. [ZBX-5791] fixed possible SQL errors when linking groups to a host (Sasha)
..F....... [ZBX-5786] fixed screens import, that contain simple graphs or plain texts (Oleg)
........S. [ZBX-5753] fixed server crash when using an icmpping* check as a discovery rule (Sasha)
...G...... [ZBX-5382] fixed agent crash on HP-UX Itanium; thanks to Alice Ferrazzi (Andris)
...G...... [ZBX-5289] fixed agent crash on Solaris; thanks to Jairo Eduardo Lopez Fuentes Nacarino, Takanori Suzuki (Andris)
..F....... [ZBX-5744] removed redundant HTML from the map monitoring page (Eduard, Pavels)
A......... [ZBX-5744] fixed script.getscriptsbyhost returning an unnecessary array of hosts for each script (Eduard, Pavels)
..F....... [ZBX-5811] fixed no permissions error when change user group "status", "frontend access" and "debug mode" using link in user groups list (Oleg)
A......... [ZBX-5751] fixed CDiscoveryRule get() and CItemPrototype get() "selectGraphs" parameter (Oleg)
..F....... [ZBX-5667] fixed host screen defined in template does not show item data for "Plain text" elements (Toms)