@@ -82,10 +82,10 @@ static void	process_test_data(zbx_uint64_t httptestid, int lastfailedstep, doubl
 
 	DB_RESULT	result;
 	DB_ROW		row;
-	unsigned char	types[3];
+	unsigned char	types[3], statuses[3];
 	DC_ITEM		items[3];
 	zbx_uint64_t	itemids[3];
-	int		errcodes[3];
+	int		lastclocks[3], errcodes[3];
 	size_t		i, num = 0;
 	AGENT_RESULT    value;
 
@@ -147,11 +147,17 @@ static void	process_test_data(zbx_uint64_t httptestid, int lastfailedstep, doubl
 				break;
 		}
 
+		items[i].status = ITEM_STATUS_ACTIVE;
 		dc_add_history(items[i].itemid, items[i].value_type, 0, &value, ts,
-				ITEM_STATUS_ACTIVE, NULL, 0, NULL, 0, 0, 0, 0);
+				items[i].status, NULL, 0, NULL, 0, 0, 0, 0);
+
+		statuses[i] = items[i].status;
+		lastclocks[i] = ts->sec;
 
 		free_result(&value);
 	}
+
+	DCrequeue_items(itemids, statuses, lastclocks, errcodes, num);
 
 	DCconfig_clean_items(items, errcodes, num);
 
@@ -164,10 +170,10 @@ static void	process_step_data(zbx_uint64_t httpstepid, ZBX_HTTPSTAT *stat, zbx_t
 
 	DB_RESULT	result;
 	DB_ROW		row;
-	unsigned char	types[3];
+	unsigned char	types[3], statuses[3];
 	DC_ITEM		items[3];
 	zbx_uint64_t	itemids[3];
-	int		errcodes[3];
+	int		lastclocks[3], errcodes[3];
 	size_t		i, num = 0;
 	AGENT_RESULT    value;
 
@@ -224,11 +230,17 @@ static void	process_step_data(zbx_uint64_t httpstepid, ZBX_HTTPSTAT *stat, zbx_t
 				break;
 		}
 
+		items[i].status = ITEM_STATUS_ACTIVE;
 		dc_add_history(items[i].itemid, items[i].value_type, 0, &value, ts,
-				ITEM_STATUS_ACTIVE, NULL, 0, NULL, 0, 0, 0, 0);
+				items[i].status, NULL, 0, NULL, 0, 0, 0, 0);
+
+		statuses[i] = items[i].status;
+		lastclocks[i] = ts->sec;
 
 		free_result(&value);
 	}
+
+	DCrequeue_items(itemids, statuses, lastclocks, errcodes, num);
 
 	DCconfig_clean_items(items, errcodes, num);
 
