@@ -75,9 +75,9 @@ static void	process_value(zbx_uint64_t itemid, zbx_uint64_t *value_ui64, double 
 
 	if (NOTSUPPORTED == ping_result)
 	{
+		item.status = ITEM_STATUS_NOTSUPPORTED;
 		dc_add_history(item.itemid, item.value_type, item.flags, NULL, ts,
-				ITEM_STATUS_NOTSUPPORTED, error, 0, NULL, 0, 0, 0, 0);
-		DCrequeue_reachable_item(item.itemid, ITEM_STATUS_NOTSUPPORTED, ts->sec);
+				item.status, error, 0, NULL, 0, 0, 0, 0);
 	}
 	else
 	{
@@ -88,13 +88,14 @@ static void	process_value(zbx_uint64_t itemid, zbx_uint64_t *value_ui64, double 
 		else
 			SET_DBL_RESULT(&value, *value_dbl);
 
+		item.status = ITEM_STATUS_ACTIVE;
 		dc_add_history(item.itemid, item.value_type, item.flags, &value, ts,
-				ITEM_STATUS_ACTIVE, NULL, 0, NULL, 0, 0, 0, 0);
-
-		DCrequeue_reachable_item(item.itemid, ITEM_STATUS_ACTIVE, ts->sec);
+				item.status, NULL, 0, NULL, 0, 0, 0, 0);
 
 		free_result(&value);
 	}
+
+	DCrequeue_items(&item.itemid, &item.status, &ts->sec, &errcode, 1);
 clean:
 	DCconfig_clean_items(&item, &errcode, 1);
 
@@ -376,7 +377,7 @@ static void	get_pinger_hosts(icmpitem_t **icmp_items, int *icmp_items_alloc, int
 {
 	const char		*__function_name = "get_pinger_hosts";
 	DC_ITEM			items[MAX_ITEMS];
-	int			i, num, count, interval, size, timeout, rc;
+	int			i, num, count, interval, size, timeout, rc, errcode = SUCCEED;
 	char			error[MAX_STRING_LEN], *addr = NULL;
 	icmpping_t		icmpping;
 	icmppingsec_type_t	type;
@@ -408,10 +409,11 @@ static void	get_pinger_hosts(icmpitem_t **icmp_items, int *icmp_items_alloc, int
 
 			zbx_timespec(&ts);
 
+			items[i].status = ITEM_STATUS_NOTSUPPORTED;
 			dc_add_history(items[i].itemid, items[i].value_type, items[i].flags, NULL, &ts,
-					ITEM_STATUS_NOTSUPPORTED, error, 0, NULL, 0, 0, 0, 0);
+					items[i].status, error, 0, NULL, 0, 0, 0, 0);
 
-			DCrequeue_reachable_item(items[i].itemid, ITEM_STATUS_NOTSUPPORTED, ts.sec);
+			DCrequeue_items(&items[i].itemid, &items[i].status, &ts.sec, &errcode, 1);
 		}
 
 		zbx_free(items[i].key);
